# tetris-nn-experiments

./: .gitignore  Cargo.toml  dataset.py  onnx_export.py  play.py  pytetris.py  train.py
datagen/: Cargo.toml
datagen/src/: main.rs
model/: __init__.py  channel_layer_norm.py  mha.py  rotary_mha.py  rotary_transformer_block.py  transformer_block.py
nn-encoding/: Cargo.toml
nn-encoding/src/: lib.rs
play/: Cargo.toml
play/src/: main.rs
